Users App: changes made to Templates after having some errors when signing in - Failing to sign in and log out

--- a/Capstone_Project-MySika_Budget/mysika_budget/users/templates/users/profile.html
+++ b/Capstone_Project-MySika_Budget/mysika_budget/users/templates/users/profile.html
@@ -16,7 +16,7 @@
     <div class="card">
         <div class="card-header">Actions</div>
         <div class="card-body text-center">
-            <a href="{% url 'logout' %}" class="btn btn-danger">Logout</a>
+            <a href="{% url 'users:logout' %}" class="btn btn-danger">Logout</a>
         </div>
     </div>
 </div>
